@@ -39,6 +39,7 @@ Always make sure your Eclipse installation us up to date.
           --add-exports javafx.controls/com.sun.javafx.scene.control=org.jabref
           --add-exports org.controlsfx.controls/impl.org.controlsfx.skin=org.jabref
           --add-exports javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls
+          --add-opens javafx.graphics/javafx.scene=org.controlsfx.controls
           --add-exports javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls
           --add-exports javafx.graphics/com.sun.javafx.css=org.controlsfx.controls
           --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls
@@ -49,9 +50,6 @@ Always make sure your Eclipse installation us up to date.
           --add-exports javafx.base/com.sun.javafx.runtime=org.controlsfx.controls
           --add-exports javafx.web/com.sun.webkit=org.controlsfx.controls
           --add-exports javafx.graphics/com.sun.javafx.css=org.controlsfx.controls
-          --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
-          --add-exports javafx.graphics/com.sun.javafx.stage=com.jfoenix
-          --add-exports com.oracle.truffle.regex/com.oracle.truffle.regex=org.graalvm.truffle
           --patch-module org.jabref=build/resources/main
        ```
 
